
pl 23:
	- TODO file inc'd
	- cadenza mode.
	- default extension, search path.
	- error.pod,faq.pod
	- Markers
	- configure script
	- scrapped VPATH
	- inputfile name in output.
Internal changes:
	- Split Input_* parsing steps to enable marking	
Bugfixes:
	- unconnected columns


pl 22:
	- doco from mpp
	- repeat signs
	- | checks for bar in a voice (Barcheck_req)
Internal changes:
	- naming (Hungarian notation, svec vs. Array)
	- cleanup PScore, Score
	- removed Staff_commands, plugging commands into Staff_column directly
Bugfixes:
	- bug noteheadswap
	- huge memleak fixed; unearthed lots of bugs

pl 21:
	- scripts
	- texts
	- nplets (triplets!)
Internal changes:
	- Move breaking stuff into a separate class Break_algorithm
	- dependencies for Staff_elem's

pl 20:
	- updated doco to .pod
	- include files from .ly
Internal changes:
	- Rational for time measurement
	- directionalspanner/textspanner

pl 19:
	- grouping code: LilyPond can set advanced multibeams.
Internal changes:
	- struct Moment


pl 18:
	- robust Staff_commands

pl 17:
	- robust Input_commands
	- merged Vertical_/Horizontal music
	- PARTIALs with duration
	- modularized lexer: multiple runs

pl 16
	- notenames configurable

pl 15
	- grouping code
	- multibeams (simple)

pl 14
	- symtables from .ly
	- Input_command
	- Input_{score/staff}

pl 13
	- Horizontal/Vertical music
	- Input_commands